--- a/Conciliacao/webapp/Views/Relatorios/RelatorioFinanceiroCredito.cshtml
+++ b/Conciliacao/webapp/Views/Relatorios/RelatorioFinanceiroCredito.cshtml
@@ -369,10 +369,10 @@
                                             Documento
                                         </th>
                                         <th>
-                                            Dt.Lançamento
+                                            Dt.Crédito.Venda
                                         </th>
                                         <th>
-                                            Vl.Lançamento
+                                            Vl.Crédito
                                         </th>
                                         <th>
                                             Banco
