--- a/Conciliacao/webapp/Views/ExtratoBancario/Index.cshtml
+++ b/Conciliacao/webapp/Views/ExtratoBancario/Index.cshtml
@@ -14,7 +14,9 @@
 
         <!-- NEW COL START -->
         <article class="col-sm-12 col-md-12 col-lg-12">
-
+            
+            @Html.ActionLink("Expressões bancárias", "CadastrarExpressoes", "ExtratoBancario", null, new { @class = "btn btn-danger", @style = "margin-bottom: 5px !important;" })
+            
             <!-- Widget ID (each widget will need unique ID)-->
             <div class="jarviswidget" id="wid-id-0" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-custombutton="false">
                 <!-- widget options:
