--- a/Conciliacao/webapp/Views/ExtratoBancario/CadastrarExpressoes.cshtml
+++ b/Conciliacao/webapp/Views/ExtratoBancario/CadastrarExpressoes.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Tamanho = " col-lg-6 ";
 }
 
-@using (Html.BeginForm(Html.BeginForm("CadastrarExpressoes", "ExtratoBancario", FormMethod.Post, new { @class = "form-horizontal smart-form" })))
+@using (Html.BeginForm(Html.BeginForm("CadastrarExpressoes", "ExtratoBancario", FormMethod.Post, new { @class = "form-horizontal smart-form", autocomplete="off" })))
 {
     @Html.AntiForgeryToken()
     <div class="row" style="padding-top: 20px;">
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.nm_expressao, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.nm_expressao, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.nm_expressao, new { @class = "form-control", autocomplete = "off" })
                         @Html.ValidationMessageFor(model => model.nm_expressao, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.bandeira, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.bandeira, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.bandeira, new { @class = "form-control", autocomplete = "off" })
                         @Html.ValidationMessageFor(model => model.bandeira, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.tp_credito_debito, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-2">
-                        @Html.EditorFor(model => model.tp_credito_debito, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.tp_credito_debito, new { @class = "form-control", autocomplete = "off" })
                         @Html.ValidationMessageFor(model => model.tp_credito_debito, "", new { @class = "text-danger" })
                     </div>
                 </div>
